--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="header">
-    <img src="download - 2021-08-19T153146.235.jpg" alt="zuri-logo">
+    <a href="https://internship.zuri.team/"><img id="zuri" src="download - 2021-08-19T153146.235.jpg" alt="zuri-logo"></a>
+    <a href="https://hng.tech/"><img id="hng" src="hng.jpg" alt="hng-logo"></a>
+    <a href="https://ingressive.org/"><img id="I4G" src="I4G.jpg" alt="I4G-logo"></a>
     <h1>APPLICATION FOR A ROLE IN THE ZURI TEAM</h1>
   </div>
   <div class="resume">
